--- a/sass/layout/_news.scss
+++ b/sass/layout/_news.scss
@@ -84,7 +84,7 @@
 	a {
 		position: relative;
 		color: #fff;
-		text-transform: uppercase;
+		// text-transform: capitalize;
 		margin-bottom: 30px;
 		font-weight: 600;
 		font-size: 1.25em;
