--- a/sass/elements/flexi/_product-cat.scss
+++ b/sass/elements/flexi/_product-cat.scss
@@ -35,9 +35,9 @@
           display: block;
           left: 0;
           background: $color__primary;
-          width: 25px;
-          height: 5px;
-          margin-top: 10px;
+          width: 30px;
+          height: 2px;
+          margin-top: 5px;
           content: "";
         }
 
@@ -53,9 +53,10 @@
         position: relative;
         background: $color__primary;
         color: #000;
-        font-weight: 500;
+        font-weight: 600;
+        font-size: .9em;
         letter-spacing: .5px;
-        padding: 15px 20px;
+        padding: 15px 15px;
         margin-top: 15px;
         text-transform: uppercase;
         border: 1px solid $color__primary;
