--- a/sass/elements/flexi/_section-help.scss
+++ b/sass/elements/flexi/_section-help.scss
@@ -2,6 +2,30 @@
 
   background: $color__primary;
 
+  .align-self-center {
+    padding-left: 15px;
+    padding-right: 15px;
+    @include md {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+
+  &__img {
+
+    padding-top: 100px;
+    padding-bottom: 100px;
+
+    @include lg {
+      padding-top: 200px;
+      padding-bottom: 200px;
+    }
+
+
+
+
+  }
+
   &__wrap {
 
     position:absolute;
@@ -11,14 +35,19 @@
     width: 100%;
     text-align: center;
 
-    p.video-title {
-      color: #fff;
-      font-size: 1.5em;
-      font-weight: 600;
+    svg {
 
-      @include lg {
-        font-size: 1.9em;
-      }
+      margin-right: 30px;
+
+    }
+
+    span.video-title {
+      color: #fff;
+      font-size: 1.25em;
+      font-weight: 600;
+      text-align: left;
+      display: inline-flex;
+      line-height: 1.1em;
     }
 
 
@@ -26,6 +55,7 @@
 
   .align-self-center {
     width: 100%;
+    padding: 15px;
   }
 
   .card-header {
@@ -78,6 +108,12 @@
     font-size: 24px;
     color: $color__secondary;
     background: none;
+
+    @include md {
+
+      font-size: 28px;
+
+    }
 
     a {
       color: $color__secondary;
