--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -104,7 +104,7 @@ footer {
       svg {
 
         height: 13px;
-        margin-right: 10px;
+        // margin-right: 10px;
 
         path {
           // fill: $color__primary;
