--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -22,21 +22,21 @@
     font-weight: 600;
 
     @include lg {
-      width: 60%
+      // width: 60%;
+      font-size: 2.4em;
     }
-
 
     &:after {
 
-      vertical-align: middle;
-      content: "";
-      display: block;
-      width: 35px;
-      height: 3px;
-      background: $color__primary;
-      margin-top: 25px;
-      margin-bottom: 50px;
-
+    display: block;
+    left: 0;
+    background: #00af43;
+    width: 45px;
+    height: 5px;
+    margin-top: 5px;
+    content: "";
+    margin-bottom: 50px;
+    
     }
 
   }
@@ -77,10 +77,6 @@
 		}
 
 	}
-
-  p {
-    font-weight: 600;
-  }
 
   input[type=text], input[type=email], input[type=url], input[type=password], input[type=search], input[type=number], input[type=tel], input[type=range], input[type=date], input[type=month], input[type=week], input[type=time], input[type=datetime], input[type=datetime-local], input[type=color], textarea {
     background: #F9F9F9;
